# tiny-dfr

./: Cargo.toml  LICENSE  README.md  build.rs  flake.nix
etc/systemd/system/: tiny-dfr.service
etc/udev/rules.d/: 99-touchbar-backlight.rules  99-touchbar-seat.rules  99-touchbar-tiny-dfr.rules
share/tiny-dfr/: config.toml
share/tiny-dfr/icons/tiny-dfr-icons/: index.theme
src/: backlight.rs  backlight_lookup_table.rs  config.rs  crash_bitmap.raw  display.rs  fonts.rs  main.rs  pixel_shift.rs
