[package]
name = "tiny-dfr"
version = "0.1.2"
edition = "2021"
license = "MIT AND Apache-2.0"
description = "The most basic dynamic function row daemon possible"
homepage = "https://github.com/WhatAmISupposedToPutHere/tiny-dfr"
repository = "https://github.com/WhatAmISupposedToPutHere/tiny-dfr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.18", default-features = false }
librsvg = "2.56.0"
drm = "0.10.0"
anyhow = "1"
input = "0.8"
libc = "0.2"
input-linux = "0.6"
input-linux-sys = "0.8"
nix = { version = "0.27", features = ["poll"] }
privdrop = "0.5.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
