[package]
name = "tiny-dfr"
version = "0.3.2"
edition = "2021"
license = "MIT AND Apache-2.0"
description = "The most basic dynamic function row daemon possible"
homepage = "https://github.com/WhatAmISupposedToPutHere/tiny-dfr"
repository = "https://github.com/WhatAmISupposedToPutHere/tiny-dfr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = { version = "0.20", default-features = false, features = ["freetype", "png"] }
librsvg = "~2.59.1"
drm = "0.11.1"
anyhow = "1"
input = "0.8"
libc = "0.2"
input-linux = { version = "0.7", features = ["serde"] }
input-linux-sys = "0.9"
nix = { version = "0.29", features = ["event", "signal", "inotify"] }
privdrop = "0.5.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
freetype-rs = "0.37"
freedesktop-icons = "0.2.6"

[build-dependencies]
pkg-config = "0.3"
